--- a/new-page.html
+++ b/new-page.html
@@ -1,17 +1,24 @@
 <html>
     <head>
         <title>Backbone Web App</title>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <!--script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.0/backbone.localStorage-min.js"></script-->
+
+        <script src="../require/jquery-min.js"></script>
+        <script src="../require/underscore-min.js"></script>
+        <script src="../require/backbone-min.js"></script>
+        <script src="../require/backbone.localStorage.js"></script>
         
-        <script src="backbone.sessionStorage.js"></script>
+        <!--script src="backbone.sessionStorage.js"></script-->
         <script src="new-script.js"></script>
+        <link type="text/css" rel="stylesheet" href="page.css"/>
     </head>
     <body>
-        <h3>ORDERS</h3>
 		<div id="ordering">
-            <table>
+            <h3>ORDERS</h3>
+            <table id="inputTable">
                 <tr>
                     <td>Item Name</td>
                     <td>&nbsp;Price</td>
@@ -19,6 +26,9 @@
                 <tr>
                     <td> <input type="input" id="itemInput" placeholder= "Item name" /> </td>
                     <td>&#36;<input type="number" id="priceInput" placeholder= "Price" /> </td>
+                </tr>
+                <tr> 
+                    <td colspan="2"><span class="error"></span></td>
                 </tr>
             </table>
             <ul id="orders" style="list-style-type:none"></ul>
@@ -33,9 +43,9 @@
         </div>
         <script type="text/template" id="itemOrdered">
             <span class="inputs">
-                <input type="input" class="itemName" value= "<%=item_name%>" readOnly />
-                &#36;<input type="number" class="price" value= "<%=price%>" readOnly />
-                <button class="remove"> Remove Item </button>
+                <input type="input" class="itemName show" value= "<%=itemName%>" />
+                &#36;<input type="number" class="price show" value= "<%=price%>" />
+                <button class="remove"> X </button>
             </span>
         </script>
     </body>
